# mds

./: CHANGELOG.md  LICENSE.md  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: ci.yml  release-please.yml
sample_data/: schema_plain.json
src/: irods_handler.py  mds.py  metadata.py  nanopub_handler.py
