[tool.poetry]
name = "mds"
version = "0.1.0"
description = "MetaData Steward converting a dataset's metadata between JSON <-> YAML <-> iRODS -> nanopub"
authors = ["Christian Meesters <meesters@uni-mainz.de>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/cmeesters/mds"
documentation = "https://github.com/cmeesters/mds/README.md"
keywords = ["metadata", "json", "yaml", "irods", "nanopub"]

[tool.poetry.dependencies]
python = "^3.11"
python-irodsclient = "*"
nanopub = "^2.0.1"
PyYAML = "*"
irods_avu_json = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^8.3.5"

[tool.coverage.run]
source_pkgs = ["mds", "tests"]
branch = true
parallel = true
omit = [
  "src/temporary/__about__.py",
]

[tool.coverage.paths]
temporary = ["src/temporary", "*/temporary/src/temporary"]
tests = ["tests", "*/temporary/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
